# NVSentinel

./: .ctlptl.yaml  .gitignore  .golangci.yml  .ko.yaml  .versions.yaml  DEVELOPMENT.md  GOVERNANCE.md  Makefile  OWNERS  OWNERS_ALIASES  README.md
.github/: copy-pr-bot.yaml  dependabot.yml
api/: Makefile  go.mod  go.sum
commons/: go.mod  go.sum
data-models/: Makefile  go.mod  go.sum
demos/: README.md
docs/: INTEGRATIONS.md  METRICS.md  OVERVIEW.md  README.md  cancelling-breakfix.md  circuit-breaker.md  csp-health-monitor-iam.md  event-exporter.md  external-datastore.md  fault-quarantine.md  fault-remediation.md  gpu-health-monitor.md  grafana-values.yaml  kubernetes-object-monitor.md  labeler.md  log-collection.md  metadata-collector.md  node-drainer.md  platform-connectors.md  postgresql-provider.md  postgresql-schema.sql  state-manager.md  syslog-health-monitor.md  tempo-service.yaml  tempo-simple-values.yaml  tracing-setup.md
event-exporter/: Dockerfile  Makefile  Tiltfile  go.mod  go.sum  main.go
fault-quarantine/: Dockerfile  Makefile  Tiltfile  go.mod  go.sum  main.go
fault-remediation/: Dockerfile  Tiltfile  go.mod  go.sum  main.go
health-events-analyzer/: Tiltfile  go.mod  go.sum  main.go
health-monitors/: Makefile
health-monitors/gpu-health-monitor/: Dockerfile  Makefile  pyproject.toml
health-monitors/gpu-health-monitor/gpu_health_monitor/: cli.py  logger.py  metrics.py
health-monitors/gpu-health-monitor/gpu_health_monitor/dcgm_watcher/: dcgm.py  metrics.py
health-monitors/gpu-health-monitor/gpu_health_monitor/platform_connector/: platform_connector.py
health-monitors/gpu-health-monitor/gpu_health_monitor/protos/: health_event_pb2.py  health_event_pb2.pyi
health-monitors/gpu-health-monitor/gpu_health_monitor/tests/: conftest.py  test_logger.py
health-monitors/gpu-health-monitor/gpu_health_monitor/tests/test_dcgm_watcher/: test_dcgm.py
health-monitors/gpu-health-monitor/gpu_health_monitor/tests/test_platform_connector/: test_platform_connector.py
janitor/: Dockerfile  Makefile  Tiltfile  go.mod  go.sum  main.go
janitor-provider/: Dockerfile  Tiltfile  go.mod  go.sum  main.go
labeler/: Dockerfile  Tiltfile  go.mod  go.sum  main.go
log-collector/: Dockerfile  Tiltfile  entrypoint.sh  mock-must-gather.sh  mock-nvidia-bug-report.sh  pyproject.toml
make/: common.mk  docker.mk
metadata-collector/: Dockerfile  go.mod  go.sum  main.go
node-drainer/: Dockerfile  Tiltfile  go.mod  go.sum  main.go
platform-connectors/: Dockerfile  Makefile  Tiltfile  go.mod  go.sum  main.go
preflight/: Makefile  go.mod  go.sum  main.go
scripts/: build-image-list.sh  buildko.sh  check-image-attestations.sh  mongodb-shell.sh  (+6 more)
(+661 files in other folders)
