[tool.poetry]
name = "gpu-health-monitor"
version = "0.1.0"
description = ""
authors = ["Lalit Adithya V <ladithyav@nvidia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.3.1"
grpcio = "^1.78.0"
prometheus-client = "^0.24.1"
grpcio-tools = "1.78.0"
protobuf = ">=6.31.1,<7.0.0"
googleapis-common-protos = ">=1.56.0"
structlog = "^25.1.0"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
coverage = "^7.13.4"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gpu_health_monitor = "gpu_health_monitor.cli:cli"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | gpu_health_monitor/protos

)
'''

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
omit = [
    "tests/*",
    "/usr/local/dcgm/*",
    "gpu_health_monitor/platform_connector/protos/*"
]
